erDiagram
    %% Tier 1 & Tier 2: Global Identity, Roles and Scoping Bridge
    User ||--o{ WorkspaceMembership : "belongs_to"
    Role ||--o{ WorkspaceMembership : "assigned_in"
    Workspace ||--o{ WorkspaceMembership : "has_members"
    Role ||--o{ Permission : "grants"

    %% Tier 3: Retail Domain (Workspace Scoped)
    Workspace ||--o{ Category : "owns"
    Category ||--o{ Product : "contains"
    Workspace ||--o{ Product : "owns"
    Workspace ||--o{ Branch : "operates"
    Workspace ||--o{ Customer : "manages"
    Customer ||--o{ Order : "places"
    Branch ||--o{ Order : "fulfills"
    Workspace ||--o{ Order : "records"
    Order ||--|{ OrderItem : "contains"
    Product ||--o{ OrderItem : "ordered_in"

    %% Tier 3: Service Operations Domain (Workspace Scoped)
    Workspace ||--o{ Service : "offers"
    Workspace ||--o{ SLA : "defines"
    Workspace ||--o{ Employee : "employs"
    Customer ||--o{ ServiceRequest : "requests"
    Service ||--o{ ServiceRequest : "categorized_by"
    SLA ||--o{ ServiceRequest : "governed_by"
    Employee ||--o{ ServiceRequest : "assigned_to"
    Workspace ||--o{ ServiceRequest : "manages"
    ServiceRequest ||--o{ Task : "breaks_down_into"
    Employee ||--o{ Task : "assigned_to"
    Task ||--o{ Schedule : "scheduled_in"
    Employee ||--o{ Schedule : "allocated_to"
    Task ||--o{ LaborEntry : "tracks_labor_in"
    Employee ||--o{ LaborEntry : "performed_by"

    %% Tier 3: Ingestion & Mapping Domain
    Workspace ||--o{ DataSource : "configures"
    DataSource ||--o{ ImportJob : "executes"
    DataSource ||--o{ MappingRule : "maps_via"

    %% Tier 3: Knowledge & RAG Domain
    Workspace ||--o{ KnowledgeBase : "owns"
    KnowledgeBase ||--o{ Document : "indexes"
    Document ||--|{ DocumentChunk : "chunked_into"

    %% Tier 3: AI, Forecasting & Decision Domain
    Workspace ||--o{ ForecastModelConfig : "configures"
    ForecastModelConfig ||--o{ ForecastRun : "trains"
    ForecastRun ||--|{ ForecastResult : "predicts"
    Workspace ||--o{ BusinessRule : "enforces"
    Workspace ||--o{ Recommendation : "generates"
    Recommendation ||--o{ ApprovalRequest : "requires"
    User ||--o{ ApprovalRequest : "reviews"

    %% System, Notifications & Audit
    User ||--o{ Notification : "receives"
    Workspace ||--o{ Notification : "optional_scope"
    Workspace ||--o{ AuditLog : "audits"
    User ||--o{ AuditLog : "actors"

    %% Entity Structure Definitions
    User {
        bigint id PK
        string username UK
        string email UK
        string password
        boolean is_active
    }

    Role {
        bigint id PK
        string name UK
        string description
    }

    Permission {
        bigint id PK
        string codename UK
        string name
        string module
    }

    Workspace {
        uuid id PK
        string name
        string code UK
        string workspace_type
        boolean is_active
        timestamp created_at
    }

    WorkspaceMembership {
        bigint id PK
        uuid workspace_id FK
        bigint user_id FK
        bigint role_id FK
        boolean is_default
    }

    Branch {
        bigint id PK
        uuid workspace_id FK
        string code
        string name
        string region
        geometry location "Point SRID 4326"
    }

    Customer {
        bigint id PK
        uuid workspace_id FK
        string code
        string name
        string phone
        string customer_segment
        geometry location "Point SRID 4326"
    }

    Order {
        bigint id PK
        uuid workspace_id FK
        string order_number
        bigint customer_id FK
        bigint branch_id FK
        date order_date
        timestamp order_timestamp
        decimal total_amount "Canonical Revenue"
        string status
    }

    Service {
        bigint id PK
        uuid workspace_id FK
        string code
        string name
        string category
        decimal base_fee
        int standard_duration_minutes
    }

    ServiceRequest {
        bigint id PK
        uuid workspace_id FK
        string request_number
        bigint customer_id FK
        bigint service_id FK
        bigint sla_id FK
        bigint assigned_employee_id FK
        geometry location "Point SRID 4326"
        string priority
        string status
        timestamp response_deadline_at
        timestamp resolution_deadline_at
    }

    Employee {
        bigint id PK
        uuid workspace_id FK
        string code
        string full_name
        decimal hourly_labor_rate
        json skills
        geometry current_location "Point SRID 4326"
        float current_workload_score
    }

    LaborEntry {
        bigint id PK
        bigint task_id FK
        bigint employee_id FK
        timestamp started_at
        timestamp ended_at
        int duration_minutes
        decimal hourly_rate_snapshot
        decimal labor_cost
    }

    KnowledgeBase {
        uuid id PK
        uuid workspace_id FK
        string name
        string embedding_model
        int embedding_dimension
    }

    DocumentChunk {
        bigint id PK
        uuid document_id FK
        int chunk_index
        text content
        vector embedding "dim derived from model"
    }

    ForecastRun {
        uuid id PK
        bigint model_config_id FK
        float mae
        float rmse
        float baseline_mae
        string artifact_path
    }

    Recommendation {
        uuid id PK
        uuid workspace_id FK
        string title
        text rationale
        string action_type
        json action_payload
        string status
    }

    ApprovalRequest {
        uuid id PK
        uuid workspace_id FK
        uuid recommendation_id FK
        string action_type
        json payload
        string status
        bigint reviewed_by_id FK
    }

    AuditLog {
        bigint id PK
        uuid workspace_id "FK (Nullable)"
        bigint actor_user_id FK
        string actor_type
        string action
        string entity_type
        string entity_id
        json changes
        timestamp timestamp
    }
